--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
+    "groq-sdk": "^0.35.0",
     "lucide-react": "^0.546.0",
     "next": "^16.0.0",
     "openai": "^4.104.0",
